# Stock-Movement-Prediction-ELT

./: README.md  pyproject.toml
bigdataproject/: extract.py  load.py  main.py  model.ipynb  tests.py  transform.py
